examples/pass/types/array_small.dew
// expect: 2
// MVP: array literal and element access.
def arr = [1, 2, 3];
def main = fn { arr[1] -> stdout; };
