examples/fail/name/unbound_var.dew
// expect error: [E007]
// Unbound variable: referencing a name that is not defined.
def main = fn { y -> stdout; };
